Update CurrentState.java